Revert "Merge stylesheet-rework"
This reverts commit 2790061ef31b877eb152226f0484ee320b5ddd06.

--- a/app/assets/stylesheets/_widgets.sass
+++ b/app/assets/stylesheets/_widgets.sass
@@ -476,6 +476,45 @@
           color: transparent
 
 
+// -- Mobile Styles --------------------
+
+html.mobile-client
+
+  .widget ul
+    border: 0
+
+  #widget-plan-controls
+    .hd
+      display: none !important
+    .menu
+      border-radius: 0px !important
+
+    li.content_target
+      form
+        margin-top: 10px
+
+    li.content_target a,
+    li.content_target.active span
+      padding: 15px 20px 15px 15px
+      font-size: 15px
+
+  #sidebar
+    .widget-button
+      padding: 15px
+      margin-bottom: 0
+
+  #widget-devotional
+    margin: 15px
+
+  .content_target b
+    display: block
+    margin-bottom: .3em
+
+  .widget-notice
+    display: none
+
+
+
 // --- Custom widgets ------
 
 #widget-100m-ad
