--- a/app/assets/stylesheets/donate.sass
+++ b/app/assets/stylesheets/donate.sass
@@ -77,3 +77,38 @@
   line-height: 1.3
 
 
+@media only screen and (max-width: 768px)
+
+  .mobile #page_title #yv-logo
+    margin-top: -4px
+
+  #main article
+    height: auto
+
+
+    h1, hr
+      display: none
+
+    .donate_action, .donate_copy, .donate_paypal_logo
+      width: auto
+
+    .donate_action .donate_radios .radio
+      display: block
+      float: none
+      padding: 5px
+
+    .donate_copy
+      margin-top: 15px
+
+    .donate_paypal_logo
+      width: auto
+      text-align: center
+      position: static !important
+      margin: 15px
+      top: none
+      right: none
+
+@media only screen and (max-width: 320px)
+
+  .donate_paypal_logo img
+    width: 100%
