--- a/app/assets/stylesheets/_split_pane.sass
+++ b/app/assets/stylesheets/_split_pane.sass
@@ -71,3 +71,39 @@
   .pagination
     margin-left: 25px
 
+
+// MOBILE - Mobile client split pane styles
+// ----------------------------------------------------------------------------------------
+
+.mobile-client
+  .split_pane
+    border-top: 0px
+
+    .content
+      margin-bottom: 20px
+      border: 0px
+      width: 100%
+
+      a
+        text-decoration: none
+
+    .sidebar
+      min-height: 100px
+
+      dt
+        font-size: 22px
+
+      dd
+        font-size: 13px
+        border-left: 1px solid #ddd
+        border-right: 1px solid #ddd
+
+      dd a
+        font-size: 15px
+        padding-left: 20px
+
+      .highlighted
+        margin-right: 0px
+
+      .highlighted a
+        font-size: 16px
