Default to bible search and handle no results

--- a/app/views/search/category.html.haml
+++ b/app/views/search/category.html.haml
@@ -24,7 +24,7 @@
       - if @category == :bible
         = render partial: "bible_version_form", locals: {search: @search}
 
-      - if @results.count > 0
+      - if @results.present? && @results.count > 0
         %ul.resource_list
           = render partial: "#{@category}_list_item", collection: @results
         
