Fixed some problems caused by the media query rework Added search to mobile (isn't working properly, though) Fixed styling problems site wide

--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -657,7 +657,6 @@ body.transition .moment
 // !Badge moment
 
 .moment-bdg
-  min-height: 150px
 
   .moment-icon
     background-position: -52px 0
@@ -665,12 +664,8 @@ body.transition .moment
   .moment-time
     padding: 10px 0 5px 0
 
-.moment-bdg-desc
-  padding-right: 20px
-
-.moment-bdg-title
-  font-weight: normal !important
-
+.moment-bdg-text
+  padding: 5px 0 0
 
 .moment-bdg-info
   display: block
@@ -680,6 +675,7 @@ body.transition .moment
   border: 1px solid #e1e1e1
   +border-radius(4px)
   padding: 10px
+  line-height: 1.4em
 
 .moment-bdg-info-img
   float: left
