--- a/app/assets/stylesheets/mobile/_nav_primary.sass
+++ b/app/assets/stylesheets/mobile/_nav_primary.sass
@@ -6,7 +6,7 @@
   height: 100%
   padding: 0px
   position: absolute
-  top: 0px
+  top: 47px
   z-index: 1005
   margin: 0px
 
@@ -100,6 +100,20 @@ article .reader-nav
   background:
     repeat: no-repeat
 
+#nav_mobile_search
+  padding: 0 0 0 3%
+
+  form
+    margin: 2px 0 0
+
+#nav_mobile_search input[type="search"]
+  width: 70%
+  border: none
+
+#nav_mobile_search input[type="submit"]
+  width: 24%
+  height: 35px
+
 #nav_mobile_home a.icon
   background:
     image: image-url("nav-sprite.png")
@@ -140,12 +154,3 @@ article .reader-nav
     image: image-url("nav-sprite.png")
     position: 12px -666px
 
-#nav_mobile_profile_menu
-
-  #nav_mobile_bookmarks
-
-  #nav_mobile_notes
-
-  #nav_mobile_highlights
-
-  #nav_mobile_friends
