--- a/app/assets/stylesheets/mobile/_pagination.sass
+++ b/app/assets/stylesheets/mobile/_pagination.sass
@@ -5,21 +5,17 @@
     font:
       size: 15px
       weight: bold
-    margin-bottom: 20px
-    padding-top: 15px
+    margin-bottom: 0
     width: 100%
 
     li
       background: none
-      margin: 0
-      padding: 0
       float: left
       padding: 1px
       margin: 0 25px 0 0
 
     .action_button
       font-size: 12px
-
 
   .pagination.labels
     float: right
@@ -61,6 +57,8 @@
   text-shadow: none
   white-space: nowrap
   width: 44px
+  height: 44px
+  display: block
 
 #main .pagination_first
   a
