--- a/app/assets/stylesheets/mobile/_search.sass
+++ b/app/assets/stylesheets/mobile/_search.sass
@@ -12,10 +12,12 @@
         clear: both
 
         select
-          margin-right: 5px
-          margin-top: 10px
-          margin-bottom: 25px
-          width: 550px
+          width: 90%
+          margin: 0 0 20px
+
+  .reference
+    padding: 15px 4% 0
+    line-height: 1.4em
 
   #noresults
     margin-top: 1em
