--- a/app/assets/stylesheets/mobile/_bookmarks.sass
+++ b/app/assets/stylesheets/mobile/_bookmarks.sass
@@ -24,102 +24,87 @@
     color: #999
 
 .bookmarks-labels-wrap
-  margin: 0 0 15px
   clear: both
   background: #fff
   +round
   font-size: 12px
   line-height: 24px
   overflow: hidden
+  +border-radius(0)
+  margin: 0
+  border-bottom: 5px solid #dedddb
+  padding: 10px 15px 15px
 
   .labels-heading
-    font-size: inherit
     line-height: inherit
-    float: left
-    margin: 0 10px 0 4px
-    padding: 5px 10px
-    border-right: 2px solid #ddd
+    padding: 5px 0
+    font-size: 15px
+    margin: 0 10px 0 0
 
 .bookmarks-labels
   overflow: auto
   margin: 0
 
   .label
-    margin: 0 0 0 1em
+    margin: 0 5px 5px 0
     float: left
-    padding: 5px 0
 
     .moment-bm-labels-link
       background-color: #ccc
+
+    a
+      color: #fff
+      padding: 0 7px
+      background-color: #0084c8
+      +border-radius(3px)
+      font-size: 15px
+      height: 30px
+      line-height: 28px
+      display: block
 
   .label:first-child
     margin-left: 0
 
 
-
-// Mobile bookmark styles
+// bookmark styles
 // -------------------------------------------------------
-.mobile-client
 
-  .note p.references
-    font-size: 13px
+.note p.references
+  font-size: 13px
 
-  // Hoverable edit controls that display edit / delete+confirm links
-  .edit_controls
-    font-size: 12px
-    span.hidden
-      opacity: 1.0
+// Hoverable edit controls that display edit / delete+confirm links
+.edit_controls
+  font-size: 12px
+  span.hidden
+    opacity: 1.0
 
-    a
-      text-transform: capitalize
-      text-decoration: underline
+  a
+    text-transform: capitalize
+    text-decoration: underline
 
-  .split_pane
-    padding-top: 0
+.split_pane
+  padding-top: 0
 
-    .content
-      width: auto
+  .content
+    width: auto
+    margin-bottom: 0
+
+    > ul
+      margin-left: 0
+
+    li:first-child
+      padding-top: 0
+
+    ul ul
+      margin: 0 !important
+
+    .bookmark
+      background: none
+      overflow: hidden
+
+    li p
       margin-bottom: 0
 
-      > ul
-        margin-left: 0
-
-      li:first-child
-        padding-top: 0
-
-      ul ul
-        margin: 0 !important
-
-      .bookmark
-        background: none
-        overflow: hidden
-
-      li p
-        margin-bottom: 0
-
-      li
-        .content
-          line-height: 1.25em !important
-
-  .bookmarks-labels-wrap
-    +border-radius(0)
-    margin: 0
-    border-bottom: 5px solid #dedddb
-
-    .labels-heading
-      float: none
-      font-size: 15px
-      margin: 0 10px 5px 4px
-
-    .label
-      margin: 2px 2px 0
-
-      a
-        color: #fff
-        padding: 0 7px
-        background-color: #0084c8
-        +border-radius(3px)
-        font-size: 15px
-        height: 30px
-        line-height: 28px
-        display: block
+    li
+      .content
+        line-height: 1.25em !important
